# task-franka-pickplace-multibase

./: .gitignore  LICENSE  README.md  evaluation_result.json  evaluation_result_baseline_ref_model_5400.json  evaluation_result_hl_in_loop_model_5525_model_5525.json  evaluation_result_hl_in_loop_model_5550_model_5550.json  evaluation_result_hl_in_loop_model_5575_model_5575.json  evaluation_result_hl_in_loop_model_5579_model_5579.json  evaluation_result_hl_in_loop_v3_model_5510_model_5510.json  evaluation_result_hl_in_loop_v3_model_5520_model_5520.json  evaluation_result_hl_in_loop_v3_model_5530_model_5530.json  evaluation_result_hl_in_loop_v3_model_5539_model_5539.json  evaluation_result_hl_in_loop_v4_model_5515_model_5515.json  evaluation_result_hl_in_loop_v4_model_5520_model_5520.json  evaluation_result_hl_in_loop_v4_model_5525_model_5525.json  evaluation_result_hl_in_loop_v4_model_5529_model_5529.json  evaluation_result_hl_retry_grasp_baseline_model_5510.json  evaluation_result_hl_retry_grasp_model_5510.json  evaluation_result_hl_timing_baseline_model_5500.json  evaluation_result_hl_timing_safe_model_5500.json  evaluation_result_s1_safe_grip_model_5400_model_5400.json  evaluation_result_s1_safe_grip_model_5450_model_5450.json  evaluation_result_s1_safe_grip_model_5500_model_5500.json  evaluation_result_s1_safe_grip_model_5549_model_5549.json  evaluation_result_s2_safe_smooth_model_5400_model_5400.json  evaluation_result_s2_safe_smooth_model_5450_model_5450.json  evaluation_result_s2_safe_smooth_model_5500_model_5500.json  (+13 more)
eval-nav/: .gitignore  LICENSE  README.md  (+3 more)
(+180 files in other folders)
